added beginning of datastore

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+
     <title>line-notes</title>
   </head>
   <body>
     <app></app>
     <script src="/static/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.0/foundation.min.css">
+    <script src="https://cdn.jsdelivr.net/foundation/6.1.0/foundation.min.js"></script>
   </body>
 </html>
