added vue-router with routing for shows

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>line-notes</title>
   </head>
   <body>
-    <app></app>
+    <!-- <app></app> -->
+    <div id="app"></div>
     <script src="/static/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.0/foundation.min.css">
