--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 
-    <title>line-notes</title>
+    <title>Fluid Notes</title>
   </head>
   <body>
     <!-- <app></app> -->
